--- a/client/views/article/delete.html
+++ b/client/views/article/delete.html
@@ -1,4 +1,5 @@
 <div class="col-xs-12">
+    <a (click)="goBack()"></a>
     <table>
         <tr class="col-xs-12" *ngFor="let article of article">
             <a class="">{{article.title}}</a>
