--- a/client/views/user/user.html
+++ b/client/views/user/user.html
@@ -10,6 +10,9 @@
         <div class="text-right" [routerLink]="['/delete']">
             删除文章
         </div>
+        <div class="text-right" (click)="logout()">
+            退出登录
+        </div>
     </div>
 </div>
 <footer></footer>
