--- a/client/views/article/deleteComment.html
+++ b/client/views/article/deleteComment.html
@@ -1,4 +1,5 @@
 <div class="col-xs-12">
+    <a (click)="goBack()"></a>
     <table>
         <tr class="col-xs-12" *ngFor="let comment of comment">
             <a class="">{{comment.content}}</a>
