--- a/client/views/user/login.html
+++ b/client/views/user/login.html
@@ -1,4 +1,6 @@
-<div class="col-xs-2"></div>
+<div class="col-xs-2">
+    <a (click)="goBack()">< 返回</a>
+</div>
 <div class="col-xs-8 login-form">
     <from action="/login" method="post">
         <input id="username" class="col-xs-12" placeholder="请输入用户名" name="username" />
@@ -15,6 +17,9 @@
     </div>
     <div [routerLink]="['/delete']" *ngIf="login_status.login_status == 200">
         删除文章
+    </div>
+    <div (click)="logout()"  *ngIf="login_status.login_status == 200">
+        退出登录
     </div>
     <div *ngIf="login_status.login_status == 400">
         登录错误
