--- a/client/component/footer/footer.html
+++ b/client/component/footer/footer.html
@@ -1,19 +1,25 @@
 <router-outlet></router-outlet>
 <div class="col-xs-12 navbar navbar-fixed-bottom bg-primary padding-top-6 footer">
     <a [routerLink]="['/']">
-        <div class="col-xs-4">
-            <i class="glyphicon glyphicon-home text-center col-xs-12 text-muted color-white"></i>
+        <div class="col-xs-3">
+            <i class="glyphicon glyphicon-camera text-center col-xs-12 text-muted color-white"></i>
             <a class="col-xs-12 text-center text-muted color-white padding-top-6">日志</a>
         </div>
     </a>
     <a [routerLink]="['/word-write']">
-        <div class="col-xs-4">
+        <div class="col-xs-3">
             <i class="glyphicon glyphicon-pencil text-center col-xs-12 text-muted color-white"></i>
             <a class="col-xs-12 text-center text-muted color-white padding-top-6">留言板</a>
         </div>
     </a>
+    <a [routerLink]="['/photo']">
+        <div class="col-xs-3">
+            <i class="glyphicon glyphicon-tag text-center col-xs-12 text-muted color-white"></i>
+            <a class="col-xs-12 text-center text-muted color-white padding-top-6">照片</a>
+        </div>
+    </a>
     <a [routerLink]="['/user']">
-        <div class="col-xs-4">
+        <div class="col-xs-3">
             <i class="glyphicon glyphicon-tag text-center col-xs-12 text-muted color-white"></i>
             <a class="col-xs-12 text-center text-muted color-white padding-top-6">个人</a>
         </div>
