--- a/client/views/user/user.html
+++ b/client/views/user/user.html
@@ -4,6 +4,9 @@
         <div class="text-right" [routerLink]="['/post']">
             发表文章
         </div>
+        <div class="text-right" [routerLink]="['/postphoto']">
+            上传图片
+        </div>
         <div class="text-right" [routerLink]="['/deleteComment']">
             删除评论
         </div>
